--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="App Landing Business Template" />
-    <meta name="keywords" content="Landing, Business, Onepage, Html, Business, Apps, Apps Landing" />
+    <meta name="description" content="Sport App for all sport lovers" />
+    <meta name="keywords" content="football, volleyball, backetball, football banta" />
 
     <!--====== TITLE TAG ======-->
     <title>Welcome to Sportixe - home for sport lovers</title>
