added privacy about and terms page

--- a/terms.html
+++ b/terms.html
@@ -112,100 +112,18 @@
             </div>
         </div>
         </header>
-        <section class="gray-bg fix welcome-text-area " id="process">
-            <!-- <div class="area-bg"></div> -->
-            <div style=" color: black; position: absolute; padding-left: 10%; padding-right: 10%; margin-top: 50px; background-color: white;">
-   <h2>Privacy Policy</h2> 
-   <p>Sportixe app/platform is a product of Sportixe Canada Inc. This privacy policy will explain how our organization uses the personal data we collect from you when you use our app. </p>
-   <p></p>Topics:
-   What data do we collect? <br/>
-   How do we collect your data? <br/>
-   How will we use your data? <br/>
-   How do we store your data? <br/>
-   Marketing<br/>
-   What are your data protection rights?<br/>
-   What are cookies?<br/>
-   How do we use cookies?<br/>
-   What types of cookies do we use?<br/>
-   How to manage your cookies<br/>
-   Privacy policies of other platforms<br/>
-   Changes to our privacy policy<br/>
-   How to contact us<br/>
-   How to contact the appropriate authorities<br/>
-   What data do we collect?<br/>
-   Sportixe collects the following data:<br/>
-   Personal identification information (Name, email address, phone number, Country, Date of Birth etc.) and 
-   Your Sport interests<br/>
-   How do we collect your data?<br/>
-   You directly provide Our Company with most of the data we collect. We collect data and process data when you:<br/>
-   Register online or place an order for any of our products or services.<br/>
-   Voluntarily complete a customer survey or provide feedback on any of our message boards or via email.<br/>
-   Use or view our platform via your browser’s cookies.<br/>
-   Select your sport interest<br/>
-   How will we use your data?<br/>
-   Our Company collects your data so that we can:<br/>
-   Process your requests and manage your account.<br/>
-   Email you with special offers on other products and services we think you might like.<br/>
-   Email you updates about tixes, notification<br/>
-   Provide you tailored tixes, forums, trends, ads etc<br/>
-   If you agree, Sportixe will share your data with other company so that they may offer you their products and services.<br/>
-   Google Inc.</p>
-   When Our Company processes your order, it may send your data to, and also use the resulting information from, credit reference agencies to prevent fraudulent purchases.
-   <p>How do we store your data?</p>
-   <p>Our Company securely stores your data on a third server and we take cybersecurity protocols.</p>
-   Our Company will keep your data as long as you are a user of sportixe platform. However, upon delete of your account, we will delete your data after six months. 
-   Marketing</p>
-   <p>Our Company would like to send you information about products and services of ours that we think you might like, as well as those of our partner companies.</p>
-   By signing up on our platform, you have consented to us sharing with you ads via our platform. </p>
-   <p> Note that we do not sell your personal data to third parties.</p>
-   <p> What are your data protection rights?</p>
-   <p> Sportixe would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following:</p>
-   <p> The right to access – You have the right to request Our Company for copies of your personal data. We may charge you a small fee for this service.
-   The right to rectification – You have the right to request that Our Company correct any information you believe is inaccurate. You also have the right to request Our Company to complete the information you believe is incomplete.
-   The right to erasure – You have the right to request that Our Company erase your personal data, under certain conditions. 
-   The right to restrict processing – You have the right to request that Our Company restrict the processing of your personal data, under certain conditions.
-   The right to object to processing – You have the right to object to Our Company’s processing of your personal data, under certain conditions.
-   The right to data portability – You have the right to request that Our Company transfer the data that we have collected to another organization, or directly to you, under certain conditions.
-   If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us at our email:
-   Contact us via : hi@sportixe.com</p>
+        <section class="features-area gray-bg fix welcome-text-area " id="process">
+            <div class="area-bg"></div>
+            <div style=" color: white; position: absolute; padding-left: 10%; padding-right: 10%; margin-top: 50px;">
+   <h2>Terms and Condition </h2> 
+<p>It is expected that you use Sportixe as a tool to communicate your views about sports and other-related activities any other use of sportixe may involve the use of sanctions on the platform. <br/>
+All tixes must be related to sports or other related activities connected to sports.<br/>
+Tixes viewed as offensive and capable of causing breach of peace may be removed and if users does not desist, such user may be suspended.<br/>
+Obscene visual content that are deemed inappropriate for public may be removed from the platform.<br/>
+As sportixe evolves these terms and conditions will change. We encourage you to visit this page regularly.<br/>
+</p>
 
-   <p> Cookies </p>
-   <p> Cookies are text files placed on your computer to collect standard Internet log information and visitor behavior information. When you visit our platforms, we may collect information from you automatically through cookies or similar technology
-   For further information, visit allaboutcookies.org. </p>
-   <p>How do we use cookies? </p>
-   <p>Our Company uses cookies in a range of ways to improve your experience on our platform, including:</p>
-   <p>Keeping you signed in </p>
-   <p>Understanding how you use our platform </p>
-   <p>What types of cookies do we use?</p>
-   <p>There are a number of different types of cookies, however, our platform uses: </p>
-
-   <p>Functionality – Our Company uses these cookies so that we recognize you on our platform and remember your previously selected preferences. These could include what language you prefer, location you are in, sports preferred etc. A mix of first-party and third-party cookies are used. </p>
-   <p>Advertising – Our Company uses these cookies to collect information about your visit to our platform, the content you viewed, the links you followed and information about your browser, device, and your IP address. Our Company sometimes shares some limited aspects of this data with third parties for advertising purposes. We may also share online data collected through cookies with our advertising partners. This means that when you visit another platform, you may be shown advertising based on your browsing patterns on our platform.</p>
-   <p>How to manage cookies/preferences </p>
-
-   <p>You can set your preferences through settings, however, some data/preferences are cannot be edited.  </p>
-
-   <p>Privacy policies of other platforms </p>
-   <p>The Our Company app contains links to other platforms. Our privacy policy applies only to our platform, so if you click on a link to another platform, you should read their privacy policy. </p>
-   Changes to our privacy policy
-   Our Company keeps its privacy policy under regular review and places any updates on this platform. This privacy policy was last updated on 18th May, 2020
-   <p>How to contact us</p>
-   <p>If you have any questions about Our Company’s privacy policy, the data we hold on you, or you would like to exercise one of your data protection rights, please do not hesitate to contact us. </p>
-   <p>Email us at: hi@sportixe.com	 </p>
-
-   <p> OTHER PRIVACY POLICY </p>
-   <p> Once you download the sportixe app and signed up, it is deemed you have agreed to our privacy policy and terms and conditions </p>
-   <p>Sportixe is public and tixes are immediately viewable and searchable by anyone around the world. You can also use Sportixe under a pseudonym if you prefer not to use your name. </p>
-   <p>When you use Sportixe, even if you’re just looking at tixes, we receive some personal information from you like the type of device you’re using, your IP address, your email address, phone number, address, book contacts, and a public profile. We use this information for things like keeping your account secure and showing you more relevant tixes, people to follow, forums, and ads. </p>
-   In addition to information you share with us, we use your tixes, content you’ve read, sport interests, green carded or red carded or retixed, and other information to determine what topics you’re interested in, your age, the languages you speak, and other signals to show you more relevant content. We give you transparency into that information, and you can modify or correct it at any time. </p>
-   If you have questions about this policy, how we collect or process your personal data, or anything else related to our privacy practices, we want to hear from you. You can contact us at any time.</p>
-   We do not use other information like contacts you share with us maliciously but only use it to encourage you friends to join you on sportixe or notify you when your friends are on sportixe for better engagement.</p>
-   We use the sport you marked to follow to create a unique feed for you to have the best of sportixe.</p>
-   <p>We do not sell your data to third party. </p>
-   <p>People with the same sport interests and your followers can see your tixes. </p>
-   <p> As sportixe evolves, we will give you control to through your settings to determine people who can see your tixes. </p>
-   <p> As sportixe evolves these policy will change. We encourage you to visit this page regularly. </p>
-   <p> Note: The law applicable in resolution of disputes between users and Sportixe Inc. is the law of Alberta, Canada </p>
+   
 </div>
 </section>
  <!--FOOER AREA-->
