--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="row">
                             <div class="col-md-12 flex-v-center">
                                 <div class="navbar-header">
-                                    <a href="/" class="custom-logo-link default-logo"><img src="assets/img/logo.png" alt="logo"></a>
+                                    <a href="/" class="custom-logo-link default-logo"><img src="assets/img/sportixe_logo.png" width="50px" alt="logo"></a>
                                     <a href="/" class="custom-logo-link sticky-logo"><img src="assets/img/sticky_logo.png" alt="logo"></a>
                                 </div>
                                 <svg class="ham hamRotate ham8" viewBox="0 0 100 100" width="50">
@@ -123,7 +123,7 @@
                     <div class="col-md-7 col-lg-7 col-sm-12 col-xs-12">
                         <div class="welcome-text">
                             <h4 class="wow fadeInUp" data-wow-delay="0.3s">Get sports updates</h4>
-                            <h1 class="wow fadeInUp" data-wow-delay="0.6s">Join discussions on <span>Sportex</span></h1>
+                            <h1 class="wow fadeInUp" data-wow-delay="0.6s">Join discussions on <span>Sportixe</span></h1>
                             <p class="wow fadeInUp" data-wow-delay="0.9s">follow your favorite sports.</p>
                             <div class="home-button mt40 xs-mt40 wow fadeInUp" data-wow-delay="1.2s">
                                 <a class="xs-mb20" href="https://play.google.com/store/apps/details?id=com.app.sporty">Download APP</a>
@@ -193,21 +193,21 @@
  
 
     <!--VIDEO PROMO AREA-->
-    <section class="video-promo-area section-padding white" id="video">
+    <!-- <section class="video-promo-area section-padding white" id="video">
         <div class="area-bg"></div>
         <div class="container">
             <div class="row flex-v-center">
                 <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
                     <div class="area-image-content sm-center xs-center sm-mb50 xs-mb50 wow fadeInRight" data-wow-delay="0.3s">
-                        <div class="video-bg-layer" data-parallax='{"x": -50,"y": -50}'><img src="assets/img/video/dots-layer.png" alt=""></div>
+                        <div class="video-bg-layer" data-parallax='{"x": -50,"y": -50}'><img src="assets/img/video/dots-layer.png" alt=""></div>-->
                         <!-- <img src="assets/img/video/video-bg.jpg" alt=""> -->
-                        <div class="video-button item-center"><button class="video-popup" data-video-id="#"><i class="fa fa-play"></i></button></div>
+                      <!--   <div class="video-button item-center"><button class="video-popup" data-video-id="#"><i class="fa fa-play"></i></button></div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-                    <div class="area-content sm-center xs-center wow fadeInRight" data-wow-delay="0.6s">
+                    <div class="area-content sm-center xs-center wow fadeInRight" data-wow-delay="0.6s"> -->
                         <!-- <h4 class="subtitle">latest video</h4> -->
-                        <h3>Watch App Video Demo </h3>
+                        <!-- <h3>Watch App Video Demo </h3>
                         <p>Watch a demo of the our app and see how it fits in your day-to-day life.</p>
                     </div>
                 </div>
@@ -239,7 +239,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--VIDEO PROMO AREA END-->
 
     <!--SCREENSHOT AREA-->
@@ -565,7 +565,7 @@
                     <div class="col-md-3 col-sm-12 col-xs-12 sm-center xs-center sm-mb50 xs-mb50">
                         <div class="single-widgets">
                             <div class="footer-logo">
-                                <a href="#"><img src="assets/img/logo.png" alt=""></a>
+                                <a href="#"><img src="assets/img/sportixe_logo.png" alt=""></a>
                             </div>
                             <p>The App for every sport lover.</p>
                             <div class="footer-search-form">
@@ -580,9 +580,9 @@
                         <div class="single-widgets xs-mb50">
                             <h3>Quick Links</h3>
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Contact Us</a></li>
+                                <li><a href="/">Home</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="index.html#contact">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
@@ -590,9 +590,9 @@
                         <div class="single-widgets xs-mb50">
                             <h3>Other Links</h3>
                             <ul>
-                                <li><a href="#">Terms and Conditions</a></li>
-                                <li><a href="#">Provacy Policy</a></li>
-                                <li><a href="#">Download App</a></li>
+                                <li><a href="terms.html">Terms and Conditions</a></li>
+                                <li><a href="privacy.html">Privacy Policy</a></li>
+                                <li><a href="https://play.google.com/store/apps/details?id=com.app.sporty">Download App</a></li>
                             </ul>
                         </div>
                     </div>
